--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>little-ui</title>
+    <title>little ui 库</title>
     <script src="//at.alicdn.com/t/font_3193046_1r9q5mphwsr.js"></script>
 </head>
 <body>
